{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 39,
  "lineage": "1fbee576-6d3a-677e-51ed-8a0bf1e55110",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de89045104c449e3",
            "association_id": "eipassoc-06c228c66cddeeac4",
            "domain": "vpc",
            "id": "eipalloc-0de89045104c449e3",
            "instance": "i-09773860117527917",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0479c62de91b7ba93",
            "private_dns": "ip-10-0-101-136.ec2.internal",
            "private_ip": "10.0.101.136",
            "public_dns": "ec2-3-221-223-197.compute-1.amazonaws.com",
            "public_ip": "3.221.223.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "Eliel"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3dd41c47751fe6",
            "arn": "arn:aws:ec2:us-east-1:602966352687:instance/i-09773860117527917",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09773860117527917",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "EKS-Terraform-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0479c62de91b7ba93",
            "private_dns": "ip-10-0-101-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.136",
            "public_dns": "ec2-54-237-158-254.compute-1.amazonaws.com",
            "public_ip": "54.237.158.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f17f108ca6b1566e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa05389016bb1769",
            "tags": {
              "Name": "Eliel-stag-BastionHost",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-BastionHost",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Eliel-stag-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0fb914f831c525211"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:security-group/sg-0fb914f831c525211",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0fb914f831c525211",
            "ingress": [],
            "name": "Eliel-stag-public-bastion-sg-20230701121736828600000006",
            "name_prefix": "Eliel-stag-public-bastion-sg-",
            "owner_id": "602966352687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eliel-stag-public-bastion-sg",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-public-bastion-sg",
              "environment": "stag",
              "owners": "Eliel"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1372414115",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fb914f831c525211",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2443306008",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb914f831c525211",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e7505c83d50a4ab",
            "domain": "vpc",
            "id": "eipalloc-08e7505c83d50a4ab",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-162-158.compute-1.amazonaws.com",
            "public_ip": "3.215.162.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-us-east-1a",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-us-east-1a",
              "environment": "stag",
              "owners": "Eliel"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:internet-gateway/igw-083ccb526a30d1d24",
            "id": "igw-083ccb526a30d1d24",
            "owner_id": "602966352687",
            "tags": {
              "Name": "Eliel-stag-EKSCluster",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster",
              "environment": "stag",
              "owners": "Eliel"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e7505c83d50a4ab",
            "connectivity_type": "public",
            "id": "nat-0a37db52d3e43226c",
            "network_interface_id": "eni-0e45a15d4b0450462",
            "private_ip": "10.0.101.133",
            "public_ip": "3.215.162.158",
            "subnet_id": "subnet-0fa05389016bb1769",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-us-east-1a",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-us-east-1a",
              "environment": "stag",
              "owners": "Eliel"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09377128d683721321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a37db52d3e43226c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09377128d68372132",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-083ccb526a30d1d24",
            "id": "r-rtb-0a5f60ff1dfa40d4f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a5f60ff1dfa40d4f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:route-table/rtb-0f7820c5d724e3cc9",
            "id": "rtb-0f7820c5d724e3cc9",
            "owner_id": "602966352687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eliel-stag-EKSCluster-db",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-db",
              "environment": "stag",
              "owners": "Eliel"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:route-table/rtb-09377128d68372132",
            "id": "rtb-09377128d68372132",
            "owner_id": "602966352687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eliel-stag-EKSCluster-private",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-private",
              "environment": "stag",
              "owners": "Eliel"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:route-table/rtb-0a5f60ff1dfa40d4f",
            "id": "rtb-0a5f60ff1dfa40d4f",
            "owner_id": "602966352687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eliel-stag-EKSCluster-public",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-public",
              "environment": "stag",
              "owners": "Eliel"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006c01796eab6bc9a",
            "route_table_id": "rtb-0f7820c5d724e3cc9",
            "subnet_id": "subnet-06b3f51b2d018f6f6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d454a233b590957b",
            "route_table_id": "rtb-0f7820c5d724e3cc9",
            "subnet_id": "subnet-0360a5626280b294e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eff84867e20ffd5c",
            "route_table_id": "rtb-09377128d68372132",
            "subnet_id": "subnet-09fe2280e356267b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f86d5e46a84e11a7",
            "route_table_id": "rtb-09377128d68372132",
            "subnet_id": "subnet-0eeb6fcf326e56033"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01577a0bb287feeb0",
            "route_table_id": "rtb-0a5f60ff1dfa40d4f",
            "subnet_id": "subnet-0fa05389016bb1769"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0b6081d014a787c",
            "route_table_id": "rtb-0a5f60ff1dfa40d4f",
            "subnet_id": "subnet-07815dce17a6c38ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:subnet/subnet-06b3f51b2d018f6f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b3f51b2d018f6f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602966352687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "Eliel"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:subnet/subnet-0360a5626280b294e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0360a5626280b294e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602966352687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "Eliel"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:subnet/subnet-09fe2280e356267b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe2280e356267b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602966352687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Eliel"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:subnet/subnet-0eeb6fcf326e56033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeb6fcf326e56033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "602966352687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Eliel"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:subnet/subnet-0fa05389016bb1769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa05389016bb1769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "602966352687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Eliel"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:subnet/subnet-07815dce17a6c38ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07815dce17a6c38ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "602966352687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eliel-stag-EKSCluster-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/Eliel-stag-EKSCluster": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Eliel"
            },
            "vpc_id": "vpc-0bceadcba214080a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:602966352687:vpc/vpc-0bceadcba214080a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01744d792fd6772df",
            "default_route_table_id": "rtb-082e3ab7fd017bacb",
            "default_security_group_id": "sg-0e3217c19932b5c9c",
            "dhcp_options_id": "dopt-0f4c3609af5cf5f51",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bceadcba214080a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082e3ab7fd017bacb",
            "owner_id": "602966352687",
            "tags": {
              "Name": "Eliel-stag-EKSCluster",
              "environment": "stag",
              "owners": "Eliel"
            },
            "tags_all": {
              "Name": "Eliel-stag-EKSCluster",
              "environment": "stag",
              "owners": "Eliel"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}